Include readme in bundle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
           paths:
             - build
             - package.json
+            - README.md
 
   publish-beta:
     executor: build-agent
